# CARA-libya

./: .env.example  .gitignore  .replit  CARA_requirements.txt  README.md  app.py  core.py  main.py  models.py  pyproject.toml  replit.md  replit.nix  requirements.txt
.agents/: agent_assets_metadata.toml
attached_assets/: 2026-4-22_Libya_CARA_development_plan_1776902300818.docx  Pasted-Skip-to-content-jdn63-CARA-libya-Repository-navigation-_1776914228678.txt  Pasted-Skip-to-content-jdn63-CARA-libya-Repository-navigation-_1777009587512.txt
config/: jurisdiction.yaml  risk_weights.yaml
config/profiles/: international.yaml  libya.yaml
data/: emdat_libya.xlsx  libya_municipalities.json
docs/: CARA_Adaptation_Workshop_Guide.md  CARA_Replit_Workshop_Guide.md  adding_custom_connector.md  api_management_guide.md  configuration_reference.md  data_dictionary.md  data_sources_comprehensive_analysis.md  risk_assessment_comprehensive_methodology.md  risk_assessment_methodology.md
migrations/: env.py
routes/: __init__.py  api.py  dashboard.py  data_entry.py  gis_export.py  public.py
scripts/: post-merge.sh  refresh_population.py
templates/: about.html  action_plan_libya.html  action_plan_pdf.html  base.html  dashboard.html  data_sources.html  index.html  login.html  methodology.html
tests/: smoke_test.py  test_api_key_manager_no_leak.py  test_dashboard_connector_mapping.py  test_inform.py  test_login_redirect.py  test_pillar_indicators.py  test_population_data.py  test_population_rollup_guardrails.py
utils/: action_plan_content.py  api_key_manager.py  api_monitoring.py  census_data_loader.py  config_manager.py  connector_registry.py  data_cache_manager.py  data_entry_domains.py  data_freshness.py  data_processor.py  dhs_data.py  em_comparison_export.py  error_handlers.py  export_job_worker.py  herc_risk_aggregator.py  local_agency_data.py  local_overrides.py  logging_config.py  pdf_export.py  persistent_cache.py  risk_alignment.py  risk_engine.py  weather_alerts.py
(+46 files in other folders)
