[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "CARA - Comprehensive Automated Risk Assessment for Wisconsin Public Health Departments"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "census>=0.8.23",
    "ecdsa>=0.19.2",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "folium>=0.19.5",
    "fonttools>=4.58.0",
    "fpdf>=1.7.2",
    "geopandas>=1.1.0",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "lxml-html-clean>=0.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.86.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=12.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyreadstat>=1.2.8",
    "pyshp>=2.3.1",
    "requests>=2.33.0",
    "scikit-learn>=1.4.0",
    "sendgrid>=6.12.4",
    "shapely>=2.0.7",
    "statsmodels>=0.14.4",
    "urllib3>=2.4.0",
    "werkzeug>=3.1.8",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.11.0",
]
