[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "CARA - Comprehensive Automated Risk Assessment for Wisconsin Public Health Departments"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.13.3",
    "census>=0.8.23",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "flask-sqlalchemy>=3.1.1",
    "folium>=0.19.5",
    "fpdf>=1.7.2",
    "geopandas>=1.1.2",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyreadstat>=1.2.8",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "scikit-learn>=1.4.0",
    "sentry-sdk>=2.58.0",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.49",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.8",
]
